--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>DaoExample</title>
     <script src="/device.js"></script>
-    <script defer src='/daopush-init.js'></script>
+    <script defer src='/init.js'></script>
     <style>
 		body, .top {
 			margin: 0;
