--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>DaoExample</title>
+    <title>Dao_Example</title>
     <script src="/device.js"></script>
     <script defer src='/daopush-init.js'></script>
     <style>
