--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		}
     </style>
 </head>
-<body onload="SendPushMe();">
+<body>
     <a class='top' href='https://daopush.com'>
         <img class='picture' src="/dao.jpg">
     </a> 
